<resources>
    <string name="app_name">Sales Orders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="login_fragment">Login</string>
    <string name="product_order">Product Order</string>
    <string name="sale_order">Sale Order</string>
    <string name="fragment_order_booking">Order Booking</string>
    <string name="registration_fragment">Registration</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Dashboard</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_group_order">GroupOrder</string>
    <string name="title_order_history">OrderHistory</string>
    <!--***************************************************************-->

    <string name="title_change_password">Change Password</string>
    <string name="title_about_us">About Us</string>
    <string name="title_contact_us">Contact Us</string>
    <!--Menu Activity-->

    <string name="nav_menu_setting">Setting</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="nav_menu_server_fragment">Server Url</string>
    <!--***************************************************************-->
    <string name="setting_contact_hyperlink"><a href="http://hdpos.in/contact-us/">Contact Us</a></string>
    <string name="print">Print</string>
    <string name="print_failed">Print Failed:</string>
    <string name="print_successful">File sent to printer</string>
    <string name="printer_paused">Printer is paused</string>
    <string name="head_open">Printer head is open</string>
    <string name="paper_out">Printer paper is out</string>
    <string name="cannot_print">Cannot send file to printer</string>
    <string name="no_printer">Cannot connect to printer</string>
    <string name="sent_to_printer">Printing...</string>
    <string name="ready_to_print">Ready to Print</string>
    <string name="no_zpl">Unable to change printer language to ZPL</string>
    <string name="unable_to_print">Unable to Print</string>
    <string name="print_succeeded">Print successful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="id_stock_array">
        <item>A</item>
        <item>D</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="yes">Yes !</string>
    <string name="no">No</string>


    <!-- TODO Navigation Names............   -->
    <string name="catalog_Fragment">Catalog</string>
    <string name="tittle_nav_design_wise_filter">DesignWiseFilter</string>
    <string name="tittle_nav_pending_order">Pending order</string>
    
    <!--TODO Menu action-->
    <string name="menu_filter">Filter</string>
    <string name="menu_search">Search</string>
    <string name="menu_other">Other</string>

    
    
</resources>