<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_setting" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_menu_home" />

    </group>
    <group android:id="@+id/grp1" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_dynamicServerUrl"
            android:icon="@drawable/ic_baseline_server_url_24"
            android:title="@string/nav_menu_server_fragment"
            app:showAsAction="never"/>
    </group>
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/nav_menu_logout" />

        <!--item
            android:id="@+id/nav_accept_stock_transfer"
            android:icon="@drawable/ic_accept"
            android:title="@string/menu_accept_stock_transfer_list" /-->
    <!--group android:id="@+id/grp2" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"
            app:showAsAction="never"/>

    </group-->

</menu>